--- a/src/components/GearSection.css
+++ b/src/components/GearSection.css
@@ -2,6 +2,7 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
+  padding-top: var(--nav-height);
   display: flex;
   background-color: var(--red-primary);
   color: var(--white);
